--- a/WebApp/WebApp/Site.Master
+++ b/WebApp/WebApp/Site.Master
@@ -79,6 +79,7 @@
                             <asp:MenuItem Text="SamplePage" Value="Samples">
                                 <asp:MenuItem Text="CrudPage" NavigateUrl="~/SamplePages/FilterSearchCrud.aspx"></asp:MenuItem>
                                 <asp:MenuItem Text="ListCrudPage" NavigateUrl="~/SamplePages/ListViewCRUDODS.aspx"></asp:MenuItem>
+                                <asp:MenuItem Text="LinQpad To WebApp" NavigateUrl="~/SamplePages/DisplayArtistAlbums.aspx"></asp:MenuItem>
                             </asp:MenuItem>
                         </Items>
                     </asp:Menu>
